<resources>
    <string name="app_name">Toll-MapBox-Test</string>
    <string name="api_key">
        pk.eyJ1IjoiamFrZWhhbGwyMCIsImEiOiJjanNjYjN0bzkwMWRhNGF0M3EyMGd2c2gyIn0.YKNyc3Ja5BLsQO7SdLiCtQ
    </string>
    <string name="tap_on_map_instruction">Hello</string>
    <!-- values for several activities -->
    <integer name="numTolls">4</integer>
<!--<array name="tollsActivated">-->
    <bool name="t1">false</bool>
    <bool name="t2">false</bool>
    <bool name="t3">false</bool>
    <bool name="t4">false</bool>
    <!--</array>-->
    <!--Toll String Names-->
    <string name="toll1">Toll 1</string>
    <string name="toll2">Toll 2</string>
    <string name="toll3">Toll 3</string>
    <string name="toll4">Toll 4</string>
    <string name="payBtn">Pay</string>

</resources>

